# api_pdb/swagger/v1/swagger.yaml
@@ -374,6 +374,86 @@ paths:
           application/json:
             schema:
               "$ref": "#/components/schemas/charts_report_params"
+  "/manager/charts/report_mecanic_by_dates":
+    post:
+      summary: Obter dados para gráficos de macânicos por ordens em manutenção e finalizadas
+        por datas
+      tags:
+      - Gráficos
+      description: Rota para obtenção de dados para gráficos por datas, essa pode
+        ser executada por usuários autenticados
+      security:
+      - Authorization: []
+      parameters: []
+      responses:
+        '200':
+          description: Sucesso
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  orders_maintenance:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        name:
+                          type: string
+                        y:
+                          type: integer
+                  orders_finish:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        name:
+                          type: string
+                        y:
+                          type: integer
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        title:
+                          type: string
+                        status:
+                          type: string
+                        details:
+                          type: string
+        '406':
+          description: Not Acceptable
+        '422':
+          description: Token não informado
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        title:
+                          type: string
+                        status:
+                          type: string
+                        details:
+                          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/charts_mecanic_report_params"
   "/manager/employees":
     post:
       summary: API para cradastro de Funcionários
@@ -2066,6 +2146,16 @@ components:
           properties:
             type_report:
               type: integer
+            initial_date:
+              type: string
+            end_date:
+              type: string
+    charts_mecanic_report_params:
+      type: object
+      properties:
+        data:
+          type: object
+          properties:
             initial_date:
               type: string
             end_date:
